@@ -135,6 +135,7 @@
 	* ADDED: when you'll decrypt the db a screen will give you all your titles and you can choose what to display
 	* ADDED: check db integrity with md5sum
 	* ADDED: lock db with chattr +i
+	* ADDED: check if password is dictionary based
 	* ADDED: options to backup db
 	* ADDED: choice if use 1 (GPG or OpenSSL) or 2 (GPG+OpenSSL) encryption methods. If you select 2, you are forced to use two differents pwds
 	* ADDED: cli interface
